--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "dependencies": {
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^8.0.3",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "pg": "^8.7.1",
